# karn-protocol

./: .gitignore  CHANGELOG.md  CI_CD_IMPLEMENTATION.md  CI_CD_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  FUZZING_INVARIANT_TESTS_SUMMARY.md  GETTING_STARTED.md  INITIALIZATION_COMPLETE.md  LANDING_PAGE_PLAN.md  LICENSE  README.md  SECURITY.md  TEST_REPORT.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_START.md  README_CI-CD.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  security.yml
contracts/: Cargo.toml
contracts/governor/: Cargo.toml
contracts/tests/: Cargo.toml  FUZZING_AND_INVARIANTS.md  README.md  fuzz_tests.rs  integration_tests.rs  invariant_tests.rs  run_integration_tests.sh
contracts/tests/src/: lib.rs
contracts/tests/test_snapshots/: test_integration_full_flow.1.json
docs/: ARCHITECTURE_EXAMPLES_TEMPLATES_IMPLEMENTATION.md  DOCUMENTATION_AND_DEPLOYMENT_IMPLEMENTATION.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_DEPLOYMENT_EXAMPLES_SUMMARY.md  FOLDER_AUDIT.md  GETTING_STARTED_IMPLEMENTATION.md  INDEX.md  MD_VERIFICATION_AND_FIXES.md  PROTOCOL_ADAPTATION_GUIDE.md  README.md  SECURITY_HARDENING.md  TERMINOLOGY_IMPLEMENTATION.md
docs/concepts/: README.md
examples/: README.md
githooks/: pre-commit
scripts/: README.md  deploy-contracts.sh  initialize-contracts.sh  install-githooks.sh  redact-tree-filter.sh  scan-sensitive.sh  setup-dev.sh  verify-deployment.sh
sdk/: CHANGELOG-v0.1.0-alpha.2.md  PUBLISH.md  README.md  jest.config.js  package-lock.json  package.json  test-fixes.js  tsconfig.json
templates/: README.md
(+138 files in other folders)
