[package]
name = "karn-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
valocracy = { path = "../valocracy" }
governor = { path = "../governor" }
treasury = { path = "../treasury" }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

# Integration tests
[[test]]
name = "integration_tests"
path = "integration_tests.rs"

# Fuzzing tests
[[test]]
name = "fuzz_tests"
path = "fuzz_tests.rs"

# Invariant tests
[[test]]
name = "invariant_tests"
path = "invariant_tests.rs"
